// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Display/Icon Custom Color 1`] = `
Array [
  <span
    className="sc-iqAclL csKvIw"
    color="primary"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0H24V24H0z"
        />
        <path
          className="icon-color"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
          fillRule="nonzero"
        />
        <path
          className="icon-color"
          d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
        />
      </g>
    </svg>
  </span>,
  <span
    className="sc-iqAclL kerxfE"
    color="error"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0H24V24H0z"
        />
        <path
          className="icon-color"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
          fillRule="nonzero"
        />
        <path
          className="icon-color"
          d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
        />
      </g>
    </svg>
  </span>,
  <span
    className="sc-iqAclL dYNzQL"
    color="rinkeby"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0H24V24H0z"
        />
        <path
          className="icon-color"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
          fillRule="nonzero"
        />
        <path
          className="icon-color"
          d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
        />
      </g>
    </svg>
  </span>,
]
`;

exports[`Storyshots Data Display/Icon Custom Size 1`] = `
Array [
  <span
    className="sc-iqAclL hWlKVA"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0H16V16H0z"
        />
        <path
          className="icon-color"
          d="M8 15c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm0-2c-2.761 0-5-2.239-5-5s2.239-5 5-5 5 2.239 5 5-2.239 5-5 5z"
          fillRule="nonzero"
        />
        <path
          className="icon-color"
          d="M9 7h2c.552 0 1 .448 1 1s-.448 1-1 1H9v2c0 .552-.448 1-1 1s-1-.448-1-1V9H5c-.552 0-1-.448-1-1s.448-1 1-1h2V5c0-.552.448-1 1-1s1 .448 1 1v2z"
        />
      </g>
    </svg>
  </span>,
  <span
    className="sc-iqAclL hWlKVA"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0H24V24H0z"
        />
        <path
          className="icon-color"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
          fillRule="nonzero"
        />
        <path
          className="icon-color"
          d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
        />
      </g>
    </svg>
  </span>,
]
`;

exports[`Storyshots Data Display/Icon Icons 1`] = `
<div
  className="sc-jQAxuV dxTkOc"
>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
          />
        </g>
      </svg>
    </span>
    add
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M4 15V9H3c-.552 0-1-.448-1-1s.448-1 1-1h1V4c0-1.105.895-2 2-2h12c1.105 0 2 .895 2 2v16c0 1.105-.895 2-2 2H6c-1.105 0-2-.895-2-2v-3H3c-.552 0-1-.448-1-1s.448-1 1-1h1zm2 0h1c.552 0 1 .448 1 1s-.448 1-1 1H6v3h12V4H6v3h1c.552 0 1 .448 1 1s-.448 1-1 1H6v6z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    addressBook
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M13.01 4c1.655 0 3 1.346 3 3s-1.345 3-3 3c-1.653 0-3-1.346-3-3s1.347-3 3-3m9.958 16.726c-1.131-3.876-3.007-8.232-7.486-9.406 1.503-.863 2.529-2.466 2.529-4.32 0-2.757-2.243-5-5-5s-5 2.243-5 5c0 1.859 1.032 3.466 2.542 4.327-.656.177-1.28.419-1.86.743-.482.27-.654.879-.383 1.361.268.48.879.655 1.36.383.973-.543 2.065-.808 3.338-.808 3.942 0 6.347 2.476 8.04 8.28.127.437.526.72.96.72.092 0 .187-.013.28-.04.53-.154.834-.71.68-1.24M6.999 17.003h2c.552 0 1 .448 1 1 0 .553-.448 1-1 1h-2v2c0 .552-.447 1-1 1-.552 0-1-.448-1-1v-2h-2c-.551 0-1-.447-1-1 0-.552.449-1 1-1h2v-1.999c0-.553.448-1 1-1 .553 0 1 .447 1 1v1.999z"
          />
        </g>
      </svg>
    </span>
    addressBookAdd
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11.999 8.002c.552 0 1 .447 1 1v4c0 .552-.448 1-1 1-.553 0-1-.448-1-1v-4c0-.553.447-1 1-1M11.999 15.752c.69 0 1.25.56 1.25 1.25s-.56 1.25-1.25 1.25-1.25-.56-1.25-1.25.56-1.25 1.25-1.25"
          />
          <path
            className="icon-color"
            d="M12 2c-.502 0-1.004.25-1.283.752L1.187 19.83C.644 20.804 1.352 22 2.47 22H21.53c1.119 0 1.826-1.196 1.283-2.17l-9.53-17.078C13.004 2.25 12.503 2 12 2m0 2.554l8.624 15.454H3.377L12 4.554"
          />
        </g>
      </svg>
    </span>
    alert
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M6.066 19.998c.292-2.109 1.506-3.209 2.686-4.276 1.101-.997 2.24-2.028 2.251-3.73-.01-1.688-1.15-2.719-2.25-3.716-.105-.092-.208-.187-.31-.282h7.115c-.102.095-.205.19-.308.282-1.1.997-2.24 2.028-2.25 3.73.01 1.688 1.148 2.719 2.25 3.716 1.18 1.067 2.394 2.167 2.686 4.276H6.066zM17.936 4c-.112.812-.364 1.474-.696 2.042-.078-.02-.153-.048-.237-.048H6.731C6.414 5.436 6.175 4.789 6.066 4h11.87zm-1.344 10.238c-1.014-.918-1.588-1.474-1.593-2.232.005-.772.58-1.329 1.593-2.247 1.44-1.303 3.411-3.087 3.411-6.759 0-.553-.448-1-1-1H5c-.553 0-1 .447-1 1 0 3.672 1.97 5.456 3.41 6.759 1.013.918 1.588 1.475 1.593 2.233-.005.772-.58 1.328-1.593 2.246C5.97 15.542 4 17.326 4 20.998c0 .553.447 1 1 1h14.003c.552 0 1-.447 1-1 0-3.672-1.972-5.457-3.41-6.76z"
          />
        </g>
      </svg>
    </span>
    allowances
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <g
            className="icon-color"
          >
            <path
              d="M2 0h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2H2C.895 9 0 8.105 0 7V2C0 .895.895 0 2 0zm0 2v5h5V2H2zM13 11h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2h-5c-1.105 0-2-.895-2-2v-5c0-1.105.895-2 2-2zm0 2v5h5v-5h-5zM15.5 9C17.985 9 20 6.985 20 4.5S17.985 0 15.5 0 11 2.015 11 4.5 13.015 9 15.5 9zm0-2C14.12 7 13 5.88 13 4.5S14.12 2 15.5 2 18 3.12 18 4.5 16.88 7 15.5 7z"
              fillRule="nonzero"
              transform="translate(2 2)"
            />
            <path
              d="M4.501 16.859l-2.865 2.865c-.372.372-.98.372-1.353 0l-.004-.005c-.372-.372-.372-.981 0-1.354L3.143 15.5.28 12.637c-.372-.372-.372-.981 0-1.353l.004-.005c.373-.372.98-.372 1.353 0L4.5 14.143l2.864-2.864c.372-.372.981-.372 1.353 0l.005.005c.372.372.372.98 0 1.353L5.86 15.5l2.865 2.864c.372.373.372.982 0 1.354l-.005.005c-.372.372-.981.372-1.353 0L4.5 16.859z"
              transform="translate(2 2)"
            />
          </g>
        </g>
      </svg>
    </span>
    apps
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        transform="rotate(180)"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11 18.586V3c0-.552.448-1 1-1s1 .448 1 1v15.586l4.121-4.122c.39-.39 1.024-.39 1.415 0 .39.391.39 1.024 0 1.415l-5.657 5.657c-.03.029-.06.056-.091.08-.184.234-.468.384-.788.384s-.604-.15-.788-.384c-.031-.024-.062-.051-.09-.08l-5.658-5.657c-.39-.39-.39-1.024 0-1.415.391-.39 1.024-.39 1.415 0L11 18.586z"
          />
        </g>
      </svg>
    </span>
    arrowUp
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        transform="rotate(270)"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11 18.586V3c0-.552.448-1 1-1s1 .448 1 1v15.586l4.121-4.122c.39-.39 1.024-.39 1.415 0 .39.391.39 1.024 0 1.415l-5.657 5.657c-.03.029-.06.056-.091.08-.184.234-.468.384-.788.384s-.604-.15-.788-.384c-.031-.024-.062-.051-.09-.08l-5.658-5.657c-.39-.39-.39-1.024 0-1.415.391-.39 1.024-.39 1.415 0L11 18.586z"
          />
        </g>
      </svg>
    </span>
    arrowRight
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11 18.586V3c0-.552.448-1 1-1s1 .448 1 1v15.586l4.121-4.122c.39-.39 1.024-.39 1.415 0 .39.391.39 1.024 0 1.415l-5.657 5.657c-.03.029-.06.056-.091.08-.184.234-.468.384-.788.384s-.604-.15-.788-.384c-.031-.024-.062-.051-.09-.08l-5.658-5.657c-.39-.39-.39-1.024 0-1.415.391-.39 1.024-.39 1.415 0L11 18.586z"
          />
        </g>
      </svg>
    </span>
    arrowDown
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        transform="rotate(90)"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11 18.586V3c0-.552.448-1 1-1s1 .448 1 1v15.586l4.121-4.122c.39-.39 1.024-.39 1.415 0 .39.391.39 1.024 0 1.415l-5.657 5.657c-.03.029-.06.056-.091.08-.184.234-.468.384-.788.384s-.604-.15-.788-.384c-.031-.024-.062-.051-.09-.08l-5.658-5.657c-.39-.39-.39-1.024 0-1.415.391-.39 1.024-.39 1.415 0L11 18.586z"
          />
        </g>
      </svg>
    </span>
    arrowLeft
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M14.998 5c-3.865 0-7 3.134-7 7s3.135 7 7 7c3.866 0 7-3.134 7-7s-3.134-7-7-7m0 2c2.758 0 5 2.242 5 5s-2.242 5-5 5c-2.757 0-5-2.242-5-5s2.243-5 5-5"
          />
          <path
            className="icon-color"
            d="M6.804 5.358C3.96 6.295 2 8.955 2 11.996c0 3.04 1.96 5.701 4.804 6.638.525.173 1.09-.113 1.263-.637.173-.525-.113-1.09-.637-1.263C5.399 16.066 4 14.166 4 11.996c0-2.17 1.399-4.07 3.43-4.738.524-.173.81-.738.637-1.263-.173-.524-.738-.81-1.263-.637z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    assets
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M8.997 15.004c-.323 0-.64-.156-.833-.445-.307-.46-.183-1.08.277-1.387l2.56-1.707V7.014c0-.553.446-1 1-1 .552 0 1 .447 1 1V12c0 .334-.168.647-.446.832l-3.004 2.004c-.17.113-.364.168-.554.168"
          />
          <path
            className="icon-color"
            d="M12 4c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0 18C6.486 22 2 17.514 2 12S6.486 2 12 2s10 4.486 10 10-4.486 10-10 10"
          />
        </g>
      </svg>
    </span>
    awaitingConfirmations
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M6 6.4L8.4 4h7.2L18 6.4h1.6c1.325 0 2.4 1.075 2.4 2.4v8.803c0 1.326-1.075 2.4-2.4 2.4H4.4c-1.325 0-2.4-1.074-2.4-2.4V8.8c0-1.325 1.075-2.4 2.4-2.4H6zM9.228 6l-2.4 2.4H4.4c-.22 0-.4.18-.4.4v8.803c0 .221.18.4.4.4h15.2c.22 0 .4-.179.4-.4V8.8c0-.22-.18-.4-.4-.4h-2.428l-2.4-2.4H9.228z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M7.5 12.5c0 2.485 2.015 4.5 4.5 4.5s4.5-2.015 4.5-4.5S14.485 8 12 8s-4.5 2.015-4.5 4.5zM12 10c1.38 0 2.5 1.12 2.5 2.5S13.38 15 12 15s-2.5-1.12-2.5-2.5S10.62 10 12 10z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    camera
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11.795 4.229l.599-.58c2.198-2.198 5.761-2.198 7.959 0 2.139 2.139 2.197 5.57.173 7.779l-.173.18-3.019 3.02c-2.197 2.196-5.76 2.196-7.959 0-.212-.212-.406-.44-.579-.68-.323-.447-.223-1.072.225-1.396.447-.323 1.072-.223 1.396.225.11.153.235.3.372.436 1.366 1.366 3.552 1.414 4.976.147l.155-.146 3.018-3.02c1.418-1.417 1.418-3.714 0-5.131-1.366-1.366-3.55-1.415-4.985-.136l-.157.147-.61.591c-.396.384-1.03.374-1.414-.022-.354-.367-.373-.934-.062-1.322l.085-.092z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M6.667 9.376c2.198-2.198 5.762-2.198 7.96 0 .156.155.3.318.436.488.342.433.269 1.062-.164 1.405-.433.343-1.062.27-1.405-.164-.087-.11-.18-.215-.28-.315-1.367-1.366-3.553-1.415-4.978-.146l-.155.146-3.018 3.018c-1.417 1.417-1.417 3.714 0 5.132 1.366 1.367 3.55 1.415 4.972.15l.155-.146.753-.763c.388-.393 1.02-.397 1.414-.009.363.358.394.925.092 1.32l-.083.094-.757.768c-2.199 2.198-5.762 2.198-7.96 0-2.139-2.14-2.197-5.57-.174-7.78l.173-.18 3.02-3.018z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    chain
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M8.999 19c-.266 0-.52-.105-.707-.293l-5.999-6.003c-.391-.391-.391-1.024 0-1.414.391-.391 1.023-.391 1.414 0l5.292 5.296L20.291 5.293c.391-.391 1.023-.391 1.414 0s.391 1.023 0 1.414l-11.999 12c-.187.188-.441.293-.707.293"
          />
        </g>
      </svg>
    </span>
    check
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M7.681 10.276c-.403-.378-1.036-.357-1.413.047-.377.403-.356 1.036.047 1.413l4.14 3.876c.398.372 1.02.358 1.4-.032l5.347-5.484c.386-.395.378-1.029-.018-1.414-.395-.386-1.028-.378-1.414.018l-4.663 4.782-3.426-3.206z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    circleCheck
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M13.414 12l2.122 2.121c.39.39.39 1.024 0 1.415-.391.39-1.024.39-1.415 0L12 13.414l-2.121 2.122c-.39.39-1.024.39-1.415 0-.39-.391-.39-1.024 0-1.415L10.586 12 8.464 9.879c-.39-.39-.39-1.024 0-1.415.391-.39 1.024-.39 1.415 0L12 10.586l2.121-2.122c.39-.39 1.024-.39 1.415 0 .39.391.39 1.024 0 1.415L13.414 12z"
          />
        </g>
      </svg>
    </span>
    circleCross
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 2C6.477 2 2 6.478 2 12c0 5.523 4.477 10 10 10 5.522 0 10-4.477 10-10 0-5.522-4.478-10-10-10m0 2c4.411 0 8 3.588 8 8s-3.589 8-8 8c-4.41 0-8-3.588-8-8s3.59-8 8-8"
          />
          <path
            className="icon-color"
            d="M7.295 10.293c.36-.36.928-.388 1.32-.083l.094.083 3.292 3.293 3.294-3.293c.36-.36.928-.388 1.32-.083l.094.083c.36.361.389.928.084 1.32l-.084.095-4 4c-.361.36-.928.388-1.32.083l-.095-.083-3.999-4c-.39-.391-.39-1.024 0-1.415z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    circleDropdown
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M9 19c-.255 0-.511-.099-.706-.293l-6.001-5.999C2.106 12.52 2 12.266 2 12c0-.265.106-.52.293-.707l5.996-6c.39-.39 1.023-.39 1.413 0 .39.391.39 1.023 0 1.414L4.412 12l5.295 5.291c.39.391.39 1.023 0 1.415-.194.195-.45.293-.706.293M15 19c-.256 0-.512-.099-.707-.294-.39-.39-.39-1.023 0-1.414L19.585 12l-5.292-5.293c-.39-.39-.39-1.023 0-1.414.391-.39 1.023-.39 1.414 0l6 6c.39.391.39 1.023 0 1.414l-6 6c-.195.194-.45.292-.707.292"
          />
        </g>
      </svg>
    </span>
    code
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="-3 -3 30 30"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <path
            d="M0 0L23.984 0 23.984 22.002 0 22.002z"
            id="prefix__a"
          />
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <g
            transform="translate(0 1)"
          >
            <path
              className="icon-color"
              d="M11.992 19.384L3.05 8.003h17.884l-8.942 11.38zM5.999 2h12.4l2.709 4.003H2.993L5.999 2zm17.974 5.16c.007-.042.009-.085.01-.128.002-.047.002-.093-.004-.141-.005-.043-.013-.084-.024-.127-.011-.046-.025-.092-.044-.137-.008-.02-.01-.042-.02-.061-.01-.022-.027-.038-.04-.06-.011-.02-.017-.043-.031-.063L19.759.44c-.186-.275-.496-.44-.83-.44H5.5c-.315 0-.611.149-.8.4L.192 6.403c-.02.026-.03.056-.047.085-.016.027-.04.048-.052.078-.006.013-.008.028-.014.042-.02.045-.031.09-.045.138-.011.042-.023.084-.028.127-.007.047-.005.094-.005.142 0 .044 0 .088.006.13.007.048.02.092.035.137.012.044.023.087.043.128.005.014.006.028.012.04.017.033.04.058.06.088.018.028.028.058.049.083l11 13.999c.189.242.479.382.786.382.307 0 .597-.14.786-.382l11-14c.019-.022.027-.05.044-.075.017-.025.038-.046.053-.073.009-.016.01-.033.018-.05.019-.041.034-.083.046-.126.015-.045.027-.09.034-.136z"
              mask="url(#prefix__b)"
            />
          </g>
        </g>
      </svg>
    </span>
    collectibles
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M15 15h4V4h-8v3h2c1.105 0 2 .895 2 2v6zM9 7V4c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v11c0 1.105-.895 2-2 2h-4v3c0 1.105-.895 2-2 2H5c-1.105 0-2-.895-2-2V9c0-1.105.895-2 2-2h4zM5 9v11h8V9H5z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    copy
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M13.413 11.998l8.291 8.291c.39.39.39 1.025 0 1.414-.39.39-1.025.39-1.415 0l-8.291-8.29-8.292 8.29c-.39.39-1.025.39-1.415 0-.389-.389-.389-1.024 0-1.414l8.292-8.291-8.292-8.292c-.389-.39-.389-1.025 0-1.415.39-.389 1.025-.389 1.415 0l8.292 8.292 8.291-8.292c.39-.389 1.025-.389 1.415 0 .39.39.39 1.025 0 1.415l-8.291 8.292z"
          />
        </g>
      </svg>
    </span>
    cross
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11 18v-1H7.999v-2h6v-2.001H9c-.552 0-1-.447-1-1v-4c0-.553.448-1 1-1h2v-1h2v1h3v2h-6v2h5c.554 0 1 .448 1 1V16c0 .553-.446 1-1 1h-2v1h-2z"
          />
          <path
            className="icon-color"
            d="M12 2C6.478 2 2 6.478 2 12s4.478 10 10 10c5.523 0 10-4.478 10-10S17.523 2 12 2m0 2c4.41 0 8 3.589 8 8s-3.59 8-8 8c-4.411 0-8-3.589-8-8s3.589-8 8-8"
          />
        </g>
      </svg>
    </span>
    currency
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M10 18.01c.553 0 1-.447 1-1v-6c0-.553-.447-1-1-1-.553 0-1 .447-1 1v6c0 .553.447 1 1 1M14.001 18.01c.553 0 1-.447 1-1v-6c0-.553-.447-1-1-1-.553 0-1 .447-1 1v6c0 .553.447 1 1 1"
          />
          <path
            className="icon-color"
            d="M16.513 19.55c-.013.255-.258.454-.497.452H7.969c-.23-.026-.461-.196-.474-.458L6.847 8h10.287l-.621 11.55zM9.997 4.617c0-.334.283-.616.617-.616h2.768c.34 0 .617.277.617.616V6H9.997V4.616zM20 6h-1.738c-.006 0-.012-.005-.02-.005-.011-.001-.021.005-.034.005h-2.21V4.616C15.999 3.174 14.827 2 13.383 2h-2.768C9.17 2 7.997 3.174 7.997 4.616V6H4c-.552 0-1 .447-1 1 0 .553.448 1 1 1h.845l.653 11.647c.063 1.31 1.16 2.356 2.44 2.356l.054-.001h8.057c1.3 0 2.399-1.044 2.462-2.348L19.137 8H20c.553 0 1-.447 1-1 0-.553-.447-1-1-1z"
          />
        </g>
      </svg>
    </span>
    delete
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M4 6h16c1.105 0 2 .895 2 2v8c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2V8c0-1.105.895-2 2-2zm0 2v8h16V8H4z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M7 13.25c.69 0 1.25-.56 1.25-1.25S7.69 10.75 7 10.75s-1.25.56-1.25 1.25.56 1.25 1.25 1.25zM12 13.25c.69 0 1.25-.56 1.25-1.25s-.56-1.25-1.25-1.25-1.25.56-1.25 1.25.56 1.25 1.25 1.25zM17 13.25c.69 0 1.25-.56 1.25-1.25s-.56-1.25-1.25-1.25-1.25.56-1.25 1.25.56 1.25 1.25 1.25z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    devicePassword
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M17.593 9.042l-2.581-2.603 2.469-2.42 2.497 2.519c.006.006-.005.102.002.108l-2.387 2.396zM6.59 20H4v-2.621l9.585-9.538 2.595 2.617L6.59 20zM22 6.557c-.007-.556-.228-1.07-.602-1.427l-2.48-2.5c-.368-.394-.894-.623-1.444-.63h-.027c-.551 0-1.085.222-1.468.607L2.295 16.254c-.188.187-.295.443-.295.709V21c0 .553.447 1 1 1h4.003c.265 0 .518-.104.705-.291l13.69-13.652c.39-.394.61-.941.602-1.5z"
          />
        </g>
      </svg>
    </span>
    edit
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <rect
            className="icon-color"
            height="8"
            rx="1"
            width="2"
            x="11"
            y="6"
          />
          <path
            className="icon-color"
            d="M12 15.75c.69 0 1.25.56 1.25 1.25s-.56 1.25-1.25 1.25-1.25-.56-1.25-1.25.56-1.25 1.25-1.25z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    error
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M8.1 9c.553 0 1-.448 1-1 0-.553-.447-1-1-1h-2c-.553 0-1 .447-1 1 0 .062.024.115.035.173-.014.057-.035.112-.035.174v7.472c0 .032.014.058.018.088-.003.03-.018.057-.018.088 0 .552.447 1 1 1h2c.553 0 1-.448 1-1 0-.553-.447-1-1-1h-1V13h1c.553 0 1-.447 1-1 0-.553-.447-1-1-1h-1V9h1zM21.1 7c-.553 0-1 .447-1 1v3h-2V8c0-.553-.447-1-1-1-.553 0-1 .447-1 1v8c0 .552.447 1 1 1 .553 0 1-.448 1-1v-3h2v3c0 .552.447 1 1 1 .553 0 1-.448 1-1V8c0-.553-.447-1-1-1M14.102 7h-3c-.553 0-1 .447-1 1 0 .552.447 1 1 1h.5v6.995c0 .552.447 1 1 1 .553 0 1-.448 1-1V9h.5c.553 0 1-.448 1-1 0-.553-.447-1-1-1M3.1 14.896c-.606 0-1.1.493-1.1 1.1 0 .606.494 1.099 1.1 1.099.606 0 1.1-.493 1.1-1.1 0-.606-.494-1.1-1.1-1.1"
          />
        </g>
      </svg>
    </span>
    eth
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="icon-color"
          clipRule="evenodd"
          d="M4 17.2V19.9998H20V17.2C20 17.0898 20 16 21 16C22 16 22 17.0898 22 17.2V21.0002C21.9998 21.0002 21.9997 21.0002 21.9995 21.0002C21.9993 21.55 21.5504 21.9998 20.9995 21.9998H2.99951C2.44951 21.9998 1.99951 21.5498 1.99951 20.9998C1.99951 20.9894 1.99968 20.9789 2 20.9685L2 17.2C2 17.0898 2 16 3 16C4 16 4 17.0898 4 17.2Z"
          fillRule="evenodd"
        />
        <path
          className="icon-color"
          clipRule="evenodd"
          d="M10.9996 5.414V16.997C10.9996 17.55 11.4476 17.997 11.9996 17.997C12.5526 17.997 12.9996 17.55 12.9996 16.997V5.414L17.1216 9.535C17.5126 9.926 18.1456 9.926 18.5356 9.535C18.9266 9.144 18.9266 8.512 18.5356 8.121L12.8786 2.464C12.8496 2.435 12.8186 2.408 12.7876 2.384C12.6036 2.149 12.3196 2 11.9996 2C11.6806 2 11.3956 2.149 11.2126 2.384C11.1816 2.408 11.1496 2.435 11.1216 2.464L5.46464 8.121C5.07364 8.512 5.07364 9.144 5.46464 9.535C5.85464 9.926 6.48764 9.926 6.87864 9.535L10.9996 5.414Z"
          fillRule="evenodd"
        />
      </svg>
    </span>
    exportImg
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M20 20v-8c0-.552.448-1 1-1s1 .448 1 1v8c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2V4c0-1.105.895-2 2-2h8c.552 0 1 .448 1 1s-.448 1-1 1H4v16h16z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M18.536 4H15.95c-.553 0-1-.448-1-1s.447-1 1-1h5c.276 0 .526.112.707.293.18.18.293.43.293.707v5c0 .552-.448 1-1 1-.553 0-1-.448-1-1V5.414l-9.243 9.243c-.39.39-1.024.39-1.414 0-.39-.39-.39-1.024 0-1.414L18.536 4z"
          />
        </g>
      </svg>
    </span>
    externalLink
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 5C7.454 5 3.572 7.902 2 12c1.572 4.098 5.454 7 10 7 4.545 0 8.427-2.902 10-7-1.573-4.098-5.455-7-10-7m0 2c3.353 0 6.347 1.938 7.823 5-1.476 3.062-4.47 5-7.823 5-3.354 0-6.348-1.938-7.823-5C5.652 8.938 8.647 7 12 7"
          />
          <path
            className="icon-color"
            d="M12.001 7.984c-2.21 0-4 1.791-4 4 0 2.21 1.79 4 4 4s4-1.79 4-4c0-2.209-1.79-4-4-4m0 2c1.103 0 2 .898 2 2 0 1.104-.897 2-2 2s-2-.896-2-2c0-1.102.897-2 2-2"
          />
        </g>
      </svg>
    </span>
    eye
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M9.293 7.455C10.152 7.168 11.059 7 12 7c3.354 0 6.348 1.938 7.823 5-.643 1.334-1.587 2.436-2.71 3.277l1.43 1.43C20.073 15.494 21.28 13.874 22 12c-1.573-4.098-5.454-7-10-7-1.514 0-2.95.328-4.255.908l1.548 1.547z"
          />
          <path
            className="icon-color"
            d="M11.837 10.001c.055-.004.107-.017.164-.017 1.103 0 2 .898 2 2 0 .057-.013.11-.018.163l1.594 1.594c.263-.532.424-1.123.424-1.757 0-2.209-1.79-4-4-4-.634 0-1.225.162-1.757.423l1.593 1.594zM12 17c-3.354 0-6.348-1.938-7.822-5 .426-.887.994-1.666 1.649-2.344l2.185 2.186c-.002.048-.01.094-.01.142 0 2.21 1.79 4 4 4 .048 0 .095-.008.143-.01l.946.945c-.36.048-.721.081-1.091.081m5.817 1.817L4.762 5.764c-.39-.39-1.023-.39-1.413 0-.392.39-.392 1.023 0 1.414l1.074 1.074C3.388 9.314 2.546 10.577 2 12c1.572 4.098 5.455 7 10 7 .964 0 1.895-.144 2.783-.389l1.62 1.62c.196.196.45.293.707.293.256 0 .512-.097.707-.293.39-.39.39-1.023 0-1.414"
          />
        </g>
      </svg>
    </span>
    eyeOff
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M22 12c0 5.523-4.478 10-10 10-5.523 0-10-4.477-10-10C2 6.478 6.477 2 12 2c5.522 0 10 4.478 10 10zm-8.585 0l3.44-3.44c.389-.39.389-1.025 0-1.415-.39-.389-1.025-.389-1.415 0L12 10.585l-3.44-3.44c-.39-.389-1.025-.389-1.414 0-.39.39-.39 1.025 0 1.415l3.44 3.44-3.44 3.44c-.39.39-.39 1.025 0 1.414.389.39 1.025.39 1.414 0l3.44-3.44 3.44 3.44c.39.39 1.025.39 1.415 0 .389-.389.389-1.025 0-1.414L13.415 12z"
          />
        </g>
      </svg>
    </span>
    filledCross
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M21.155 17.238c-.08 0-.16-.01-.24-.029-.536-.132-.864-.674-.732-1.21.012-.049 1.169-4.875-.374-8.28-2.21-4.877-6.945-4.727-7.152-4.717-.536.012-1.018-.402-1.045-.952-.026-.549.395-1.017.944-1.046.252-.012 6.287-.256 9.076 5.89 1.832 4.042.548 9.36.493 9.584-.113.455-.521.76-.97.76M2 15.65c-.2 0-.4-.06-.577-.183-.45-.319-.558-.943-.24-1.394.824-1.167 1.096-2.23 1.363-4.034C3.55 3.214 8.549 1.659 8.76 1.597c.529-.16 1.087.145 1.244.675.155.528-.145 1.083-.67 1.24-.175.055-4 1.312-4.812 6.819-.252 1.716-.555 3.267-1.705 4.896-.196.277-.505.423-.819.423"
          />
          <path
            className="icon-color"
            d="M6.658 13.872c-.063 0-.128-.006-.192-.019-.542-.105-.896-.63-.79-1.172 0-.006.173-.895.375-2.116.61-3.732 2.967-5.943 6.316-5.943l.15.001c3.944.078 5.475 3.001 5.538 3.126.25.492.054 1.094-.438 1.345-.491.248-1.088.055-1.341-.432-.053-.098-1.1-1.985-3.798-2.039-3.14-.063-4.13 2.286-4.454 4.267-.207 1.258-.386 2.173-.386 2.173-.092.478-.511.81-.98.81"
          />
          <path
            className="icon-color"
            d="M10.891 22.994c-.199 0-.4-.06-.576-.183-.45-.319-.559-.942-.24-1.394 2.216-3.139 3.446-7.684 3.482-9.757.006-.319-.042-.755-.3-1.019-.212-.213-.505-.258-.714-.258-.568 0-1.048.47-1.048 1.027 0 .553-.447 1-1 1-.552 0-1-.447-1-1 0-1.669 1.368-3.027 3.048-3.027.836 0 1.596.304 2.14.856.41.42.895 1.185.874 2.456-.047 2.674-1.53 7.593-3.848 10.876-.195.276-.504.423-.818.423M15.75 22.017c-.16 0-.322-.038-.473-.12-.486-.261-.669-.867-.407-1.354 1.24-2.306 2.426-5.963 2.276-8.93-.027-.551.398-1.021.95-1.05.536-.041 1.02.397 1.05.95.178 3.58-1.243 7.613-2.514 9.978-.18.336-.526.526-.882.526"
          />
          <path
            className="icon-color"
            d="M6.738 21.637c-.247 0-.493-.091-.687-.273-.401-.38-.42-1.012-.04-1.414 1.498-1.585 2.429-3.336 2.929-5.51.124-.537.66-.875 1.198-.75.539.124.875.66.75 1.198-.582 2.535-1.67 4.58-3.423 6.436-.197.208-.461.313-.727.313M3.942 19.22c-.28 0-.558-.115-.755-.344-.362-.417-.317-1.048.1-1.41.86-.748 1.438-1.882 1.444-1.892.248-.494.849-.693 1.342-.445.493.247.692.846.446 1.34-.03.06-.754 1.493-1.922 2.507-.188.164-.423.245-.655.245"
          />
        </g>
      </svg>
    </span>
    fingerPrint
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11.182 12.552c-.128.117-.242.247-.342.387-1.046 1.478 1.086 3.218 2.325 1.898.118-.125.222-.264.311-.412l2.245-4.28c.306-.512-.353-1.05-.795-.648l-3.744 3.055"
            fill="#B2B5B2"
          />
          <path
            className="icon-color"
            d="M12 4C6.476 4 2 8.477 2 14c0 1.555.364 3.064 1.051 4.445.17.34.516.554.895.554h16.107c.38 0 .726-.214.896-.554.686-1.378 1.05-2.888 1.05-4.445 0-5.523-4.476-10-10-10zm0 2c4.418 0 8 3.581 8 8l-.008.338c-.038.9-.228 1.775-.56 2.603l-.025.058H4.592l-.025-.059C4.194 16.007 4 15.015 4 14c0-4.418 3.582-8 8-8z"
            fill="#B2B5B2"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    fuelIndicator
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M7.282 5C5.472 5 4 6.472 4 8.281v3.428c0 1.814 1.472 3.29 3.282 3.29h2.616c.313 0 .608.147.797.396 1.593 2.101 2.627 2.994 3.202 3.372-.332-1.118-.34-2.078-.304-2.817.026-.533.465-.951 1-.951h2.126c1.81 0 3.281-1.467 3.281-3.27V8.281C20 6.472 18.528 5 16.72 5H7.281zm7.098 16c-.325 0-.71-.077-1.145-.304-1.06-.554-2.349-1.797-3.829-3.697H7.282C4.37 16.999 2 14.626 2 11.709V8.281C2 5.369 4.37 3 7.282 3h9.437C19.631 3 22 5.369 22 8.281v3.448c0 2.906-2.369 5.27-5.28 5.27h-1.125c.04.501.142 1.058.381 1.668.303.77.071 1.606-.565 2.036-.139.093-.503.297-1.03.297z"
          />
        </g>
      </svg>
    </span>
    getInTouch
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12.576 2.176l.099.077 8.999 7.999c.412.367.45.999.083 1.412-.339.38-.904.442-1.313.16l-.1-.077-.34-.303.001 8.554c0 1.055-.816 1.918-1.85 1.995l-.15.005h-12c-1.055 0-1.918-.815-1.994-1.85l-.006-.15v-8.546l-.34.303c-.381.338-.95.333-1.323.005l-.09-.089c-.338-.38-.332-.948-.005-1.322l.089-.09 9.01-8.006c.347-.309.856-.335 1.23-.077zm-6.57 17.822h12V9.668l-5.997-5.33-6.005 5.336.001 10.324z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    home
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="icon-color"
          clipRule="evenodd"
          d="M4 17.2V19.9998H20V17.2C20 17.0898 20 16 21 16C22 16 22 17.0898 22 17.2V21.0002C21.9998 21.0002 21.9997 21.0002 21.9995 21.0002C21.9993 21.55 21.5504 21.9998 20.9995 21.9998H2.99951C2.44951 21.9998 1.99951 21.5498 1.99951 20.9998C1.99951 20.9894 1.99968 20.9789 2 20.9685L2 17.2C2 17.0898 2 16 3 16C4 16 4 17.0898 4 17.2Z"
          fillRule="evenodd"
        />
        <path
          className="icon-color"
          clipRule="evenodd"
          d="M13.0009 14.5831L13.0009 3.00007C13.0009 2.44707 12.5529 2.00007 12.0009 2.00007C11.4479 2.00007 11.0009 2.44707 11.0009 3.00007L11.0009 14.5831L6.87885 10.4621C6.48785 10.0711 5.85485 10.0711 5.46485 10.4621C5.07385 10.8531 5.07385 11.4851 5.46485 11.8761L11.1219 17.5331C11.1509 17.5621 11.1819 17.5891 11.2129 17.6131C11.3969 17.8481 11.6809 17.9971 12.0009 17.9971C12.3199 17.9971 12.6049 17.8481 12.7879 17.6131C12.8189 17.5891 12.8509 17.5621 12.8789 17.5331L18.5359 11.8761C18.9269 11.4851 18.9269 10.8531 18.5359 10.4621C18.1459 10.0711 17.5129 10.0711 17.1219 10.4621L13.0009 14.5831Z"
          fillRule="evenodd"
        />
      </svg>
    </span>
    importImg
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <rect
            className="icon-color"
            height="8"
            rx="1"
            width="2"
            x="11"
            y="10"
          />
          <path
            className="icon-color"
            d="M12 5.75c.69 0 1.25.56 1.25 1.25S12.69 8.25 12 8.25 10.75 7.69 10.75 7s.56-1.25 1.25-1.25z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    info
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11.542 3.116c.256-.135.555-.151.822-.05l.112.05 10 5.287c.35.184.528.524.533.867l-.005.104.007.117v9.5c0 .552-.448 1-1 1-.513 0-.935-.386-.993-.884l-.007-.116v-7.982l-2.007 1.146.001 3.841c0 2.867-3.2 5-7 5-3.714 0-6.854-2.037-6.995-4.805l-.005-.195v-3.848l-3.5-2.001C.856 9.777.835 8.87 1.423 8.46l.11-.067 10.008-5.278zM7.004 13.291l.001 2.705c0 1.551 2.173 3 5 3 2.74 0 4.868-1.362 4.994-2.859l.006-.14v-2.7l-4.499 2.571c-.269.154-.591.173-.874.058l-.118-.058-4.51-2.577zm5.004-8.16L4.077 9.313l7.933 4.535 7.924-4.528-7.926-4.189z"
          />
        </g>
      </svg>
    </span>
    knowledge
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M10.729 13.135c-.266 0-.52-.105-.707-.293l-2.543-2.545c-.39-.391-.39-1.024 0-1.414.391-.391 1.023-.391 1.414 0l1.835 1.837 4.38-4.38c.39-.39 1.023-.39 1.413 0 .392.392.392 1.024 0 1.415l-5.086 5.087c-.187.188-.44.293-.707.293"
          />
          <path
            className="icon-color"
            d="M6 4v15.057l5.421-3.873c.348-.248.813-.248 1.163 0L18 19.056V4H6zm13 18c-.205 0-.408-.063-.582-.187l-6.416-4.586-6.421 4.586c-.305.218-.706.249-1.039.077C4.209 21.718 4 21.375 4 21V3c0-.553.447-1 1-1h14c.553 0 1 .447 1 1v18c0 .375-.209.718-.543.89-.144.074-.301.11-.457.11z"
          />
        </g>
      </svg>
    </span>
    licenses
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M11 8.416V21c0 .553.447 1 1 1 .553 0 1-.447 1-1V8.416l4.122 4.121c.39.391 1.023.391 1.413 0 .392-.39.392-1.023 0-1.414L12.88 5.466c-.03-.029-.06-.056-.091-.08-.184-.235-.469-.384-.789-.384-.319 0-.604.15-.787.384-.03.024-.063.051-.09.08l-5.657 5.657c-.391.391-.391 1.023 0 1.414.39.391 1.022.391 1.413 0L11 8.417zM21 4H3c-.55 0-1-.45-1-1s.45-1 1-1h18c.55 0 1 .45 1 1s-.45 1-1 1"
          />
        </g>
      </svg>
    </span>
    loadSafe
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M18 18.997c0 .552-.448 1-1 1H7c-.552 0-1-.448-1-1v-7c0-.552.448-1 1-1h10c.552 0 1 .448 1 1v7zM12.004 4c2.206 0 4 1.795 4 4v.997h-8V8c0-2.206 1.794-4.001 4-4.001zm6 5.183V8c0-3.31-2.692-6.001-6-6.001-3.309 0-6 2.692-6 6v1.18C4.84 9.593 4 10.693 4 11.997v7c0 1.654 1.346 3 3 3h10c1.654 0 3-1.346 3-3v-7c0-1.301-.837-2.4-1.996-2.814z"
          />
          <path
            className="icon-color"
            d="M13.5 14.494c0-.83-.672-1.5-1.5-1.5s-1.5.67-1.5 1.5c0 .443.195.837.502 1.11v1.386c0 .554.449 1.003 1.003 1.003.555 0 1.004-.45 1.004-1.003v-1.392c.3-.275.491-.666.491-1.104"
          />
        </g>
      </svg>
    </span>
    locked
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M16 2H8C6.35 2 5 3.35 5 5v14c0 1.65 1.35 3 3 3h8c1.65 0 3-1.35 3-3V5c0-1.65-1.35-3-3-3m0 2c.542 0 1 .458 1 1v14c0 .542-.458 1-1 1H8c-.542 0-1-.458-1-1V5c0-.542.458-1 1-1h8"
          />
          <path
            className="icon-color"
            d="M12 16.757c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25"
          />
        </g>
      </svg>
    </span>
    mobileConfirm
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M13.238 18.753c0 .69-.56 1.25-1.25 1.25s-1.25-.56-1.25-1.25.56-1.25 1.25-1.25 1.25.56 1.25 1.25M21.707 9.023c-2.593-2.593-6.04-4.02-9.707-4.02-1.145 0-2.265.147-3.347.417l1.709 1.71c.539-.076 1.084-.128 1.638-.128 3.133 0 6.078 1.22 8.293 3.435.195.195.451.293.707.293.256 0 .512-.098.707-.293.391-.39.391-1.023 0-1.414"
          />
          <path
            className="icon-color"
            d="M4.69 4.293c-.39-.391-1.023-.391-1.414 0-.39.391-.39 1.023 0 1.414l1.408 1.408c-.855.539-1.658 1.176-2.39 1.908-.392.391-.392 1.024 0 1.415.39.39 1.022.39 1.413 0 .737-.738 1.56-1.356 2.44-1.861l1.668 1.669c-.909.443-1.768 1.023-2.522 1.777-.39.391-.39 1.024 0 1.415.39.39 1.023.39 1.414 0 .767-.767 1.663-1.323 2.616-1.684l1.817 1.817c-1.072.177-2.063.668-2.847 1.452-.39.391-.39 1.024 0 1.415.39.39 1.023.39 1.414 0 .965-.966 2.495-1.159 3.7-.6l2.871 2.871c.195.195.451.293.707.293.256 0 .512-.098.707-.293.391-.391.391-1.023 0-1.414L4.69 4.293zM18.707 12.023c-1.721-1.72-3.944-2.63-6.202-2.75l2.703 2.703c.754.357 1.463.838 2.085 1.461.195.195.451.293.707.293.256 0 .512-.098.707-.293.391-.39.391-1.023 0-1.414"
          />
        </g>
      </svg>
    </span>
    noInternet
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M16 8.999c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2M7.998 4c1.103 0 2 .897 2 2s-.897 2-2 2c-1.102 0-2-.897-2-2s.898-2 2-2m14.96 16.719c-.689-2.362-1.914-5.356-4.792-6.366C19.267 13.64 20 12.406 20 10.999c0-2.206-1.794-4-4-4-2.023 0-3.683 1.515-3.946 3.467-.528-.458-1.158-.843-1.903-1.106 1.108-.712 1.847-1.948 1.847-3.36 0-2.206-1.794-4-4-4s-4 1.794-4 4c0 1.407.734 2.642 1.836 3.354-2.88 1.01-4.105 4.005-4.794 6.368-.154.53.15 1.086.68 1.24.093.027.187.04.28.04.434 0 .833-.283.96-.72 1.08-3.701 2.587-5.28 5.04-5.28 2.163 0 3.552 1.204 4.593 3.959-2.015 1.322-2.975 3.766-3.556 5.758-.154.53.151 1.086.68 1.24.094.027.188.04.28.04.434 0 .833-.283.96-.72 1.08-3.701 2.586-5.28 5.04-5.28 2.453 0 3.96 1.579 5.04 5.28.154.529.702.834 1.24.68.531-.154.834-.71.68-1.24"
          />
        </g>
      </svg>
    </span>
    owners
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M7.05 5H6v15h12V5h-1.05c-.232 1.141-1.24 2-2.45 2h-5c-1.21 0-2.218-.859-2.45-2zm9.45-2H18c1.105 0 2 .895 2 2v15c0 1.105-.895 2-2 2H6c-1.105 0-2-.895-2-2V5c0-1.105.895-2 2-2h1.5c.456-.607 1.182-1 2-1h5c.818 0 1.544.393 2 1zm-7 1c-.276 0-.5.224-.5.5s.224.5.5.5h5c.276 0 .5-.224.5-.5s-.224-.5-.5-.5h-5z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    paste
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M13.899 19H20v-2h-4.674c-.356.75-.841 1.426-1.427 2zm2.03-4H20v-2h-4.07c.046.327.07.66.07 1 0 .34-.024.673-.07 1zm-.603-4H20V9h-6.101c.586.574 1.071 1.25 1.427 2zm-5.325-3.929L10 7V5c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v2c0 .364-.097.706-.268 1 .17.294.268.636.268 1v2c0 .364-.097.706-.268 1 .17.294.268.636.268 1v2c0 .364-.097.706-.268 1 .17.294.268.636.268 1v2c0 1.105-.895 2-2 2h-8c-.375 0-.725-.103-1.025-.282C10.348 20.9 9.685 21 9 21c-3.866 0-7-3.134-7-7s3.134-7 7-7c.34 0 .674.024 1.001.071zM20 7V5h-8v2h8zM9 19c2.761 0 5-2.239 5-5s-2.239-5-5-5-5 2.239-5 5 2.239 5 5 5z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    paymentToken
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12.38 21.935c-.227.086-.478.087-.705.001-3.157-1.185-5.515-2.776-6.99-4.733-.26-.33-.468-.635-.627-.93-.833-1.418-1.137-3.49-1.053-4.667V5.279c0-.58.49-1.037 1.069-.998.5.035.75.047 1.03.047 1.739 0 3.28-.423 4.702-1.12.081-.041.162-.083.242-.126.364-.195.606-.348 1.023-.626l.165-.12c.039-.03.065-.05.086-.07.36-.334.91-.356 1.296-.052 1.5 1.179 3.663 2.114 6.281 2.114.278 0 .53-.013 1.03-.047.577-.04 1.067.419 1.067.998v6.375l.002.063c.007.324 0 .687-.034 1.11-.05.625-.15 1.242-.312 1.83-.141.507-.326.977-.563 1.4-1.26 2.338-3.764 4.388-7.71 5.878zm5.951-6.832l.01-.016c.154-.276.282-.6.384-.966.125-.453.205-.946.245-1.453.028-.349.034-.647.029-.91l-.003-.104V6.328H18.9c-2.79 0-5.132-.882-6.899-2.09-.375.249-.636.408-1.006.606-.099.053-.199.105-.303.157-1.68.825-3.512 1.327-5.588 1.327h-.098l-.002 5.347c-.016.236.011.833.097 1.417.124.847.352 1.604.7 2.199.116.215.26.428.468.69 1.185 1.572 3.112 2.905 5.757 3.947 3.309-1.31 5.324-2.996 6.306-4.825z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    privacyPolicy
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M4 2h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2V4c0-1.105.895-2 2-2zm0 2v5h5V4H4zM4 13h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-5c0-1.105.895-2 2-2zm0 2v5h5v-5H4zM15 2h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2h-5c-1.105 0-2-.895-2-2V4c0-1.105.895-2 2-2zm0 2v5h5V4h-5z"
            fillRule="nonzero"
          />
          <rect
            className="icon-color"
            height="3"
            rx=".5"
            transform="matrix(-1 0 0 1 29 0)"
            width="3"
            x="13"
            y="13"
          />
          <rect
            className="icon-color"
            height="3"
            rx=".5"
            transform="matrix(-1 0 0 1 41 0)"
            width="3"
            x="19"
            y="13"
          />
          <rect
            className="icon-color"
            height="3"
            rx=".5"
            transform="matrix(-1 0 0 1 35 0)"
            width="3"
            x="16"
            y="16"
          />
          <rect
            className="icon-color"
            height="3"
            rx=".5"
            transform="matrix(-1 0 0 1 41 0)"
            width="3"
            x="19"
            y="19"
          />
          <rect
            className="icon-color"
            height="3"
            rx=".5"
            transform="matrix(-1 0 0 1 29 0)"
            width="3"
            x="13"
            y="19"
          />
        </g>
      </svg>
    </span>
    qrCode
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M10.442 9.134c0-.77.652-1.405 1.47-1.405.816 0 1.468.635 1.468 1.405.009.562-.134.757-.825 1.262l-.047.034c-1.172.855-1.664 1.537-1.595 2.893l-.001.197c0 .552.448 1 1 1s1-.448 1-1v-.248c-.027-.562.093-.73.774-1.226l.048-.035c1.163-.849 1.667-1.537 1.646-2.892 0-1.871-1.558-3.39-3.468-3.39-1.911 0-3.47 1.519-3.47 3.405 0 .552.448 1 1 1s1-.448 1-1zM12 15.75c.69 0 1.25.56 1.25 1.25s-.56 1.25-1.25 1.25-1.25-.56-1.25-1.25.56-1.25 1.25-1.25z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    question
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 2c-.369 0-.738.195-.92.586L8.805 7.851c-.144.306-.43.521-.766.573l-5.178.795c-.814.125-1.148 1.118-.574 1.71l3.817 3.526c.223.23.324.552.273.868l-1.304 5.5c-.106.655.415 1.18 1.002 1.18.163 0 .331-.041.492-.13l4.94-2.515c.153-.085.323-.128.493-.128.17 0 .34.043.493.128l4.851 2.515c.162.089.33.13.492.13.588 0 1.108-.525 1.002-1.18l-1.215-5.5c-.052-.316.05-.638.273-.868l3.816-3.526c.574-.592.241-1.585-.573-1.71l-5.179-.795c-.335-.052-.622-.267-.765-.573L12.92 2.586C12.737 2.195 12.37 2 12 2m0 3.499l1.36 3.145c.006.017.015.035.023.052.427.914 1.276 1.552 2.273 1.704l3.156.485-2.274 2.101-.077.076c-.66.68-.965 1.646-.813 2.583.006.037.014.074.022.11l.748 3.385-2.985-1.547c-.44-.238-.934-.363-1.433-.363-.496 0-.988.124-1.425.358L7.527 19.14l.796-3.355.03-.141c.15-.937-.154-1.902-.815-2.582-.024-.026-.05-.051-.077-.076l-2.273-2.101 3.155-.485c.997-.152 1.846-.789 2.273-1.703.01-.017.017-.035.025-.053l1.36-3.145"
          />
        </g>
      </svg>
    </span>
    rateApp
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M15.287 12.297l-2.29 2.29V7c0-.55-.45-1-1-1-.551 0-1 .45-1 1v7.587l-2.291-2.29c-.39-.389-1.025-.389-1.414 0-.39.389-.39 1.025 0 1.414l3.998 3.997c.058.06.132.092.2.133.042.025.076.061.122.081.04.018.087.018.13.028.212.057.436.056.64-.028.044-.019.077-.054.118-.079.07-.041.143-.074.204-.135l3.997-3.997c.389-.389.389-1.025 0-1.414-.39-.39-1.025-.39-1.414 0z"
          />
        </g>
      </svg>
    </span>
    received
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M19.856 7.608c.311.559.565 1.154.754 1.78 1.444 4.755-1.242 9.78-5.997 11.222-4.756 1.443-9.78-1.243-11.223-5.997C1.947 9.857 4.632 4.832 9.388 3.389c.856-.259 1.735-.388 2.612-.388.553 0 1 .447 1 1 0 .552-.447 1-1 1-.681 0-1.365.1-2.032.302-3.698 1.122-5.787 5.03-4.664 8.73 1.122 3.697 5.03 5.785 8.728 4.664 3.698-1.122 5.787-5.03 4.664-8.73-.155-.51-.364-.996-.623-1.449l-.248 1.432c-.094.544-.612.91-1.156.815-.544-.094-.91-.612-.815-1.156l.616-3.557c.093-.538.6-.902 1.14-.818l3.54.551c.546.085.92.597.835 1.142-.085.546-.597.92-1.142.835l-.987-.154z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M8.582 12.927c-.47.29-.618.905-.328 1.376.29.47.905.617 1.375.327l2.892-1.779c.296-.182.476-.504.476-.851V8.015c0-.553-.447-1-1-1-.552 0-1 .447-1 1v3.426l-2.415 1.486z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    recover
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M16.361 16.79l-3.285-1.298c-.513-.204-1.096.05-1.296.563-.204.513.049 1.094.562 1.296l1.165.461c-.675.235-1.386.37-2.11.37h-.014c-2.27-.005-4.39-1.228-5.537-3.19-.277-.477-.89-.639-1.367-.36-.478.278-.639.89-.36 1.367 1.503 2.573 4.284 4.176 7.26 4.183h.019c.956 0 1.896-.179 2.79-.493l-.36.961c-.194.517.068 1.093.586 1.287.114.043.232.064.35.064.405 0 .786-.247.937-.65l1.23-3.282c.191-.51-.062-1.08-.57-1.28M15.793 5.682c.68 0 1.23.552 1.23 1.23 0 .678-.55 1.23-1.23 1.23-.678 0-1.229-.552-1.229-1.23 0-.678.551-1.23 1.23-1.23M8.204 4c.678 0 1.23.552 1.23 1.23 0 .679-.552 1.23-1.23 1.23-.679 0-1.23-.551-1.23-1.23 0-.678.551-1.23 1.23-1.23m12.73 9.007c-.626-1.668-1.81-2.906-3.228-3.508.794-.588 1.316-1.525 1.316-2.587 0-1.781-1.449-3.23-3.23-3.23-1.78 0-3.229 1.449-3.229 3.23 0 1.062.522 1.999 1.316 2.587-.397.168-.778.374-1.13.639-.66-1.07-1.578-1.874-2.632-2.32.794-.59 1.317-1.526 1.317-2.588 0-1.78-1.45-3.23-3.23-3.23s-3.23 1.45-3.23 3.23c0 1.062.522 1.999 1.316 2.588-1.417.6-2.602 1.84-3.227 3.508-.194.517.068 1.093.584 1.288.517.19 1.094-.068 1.29-.585.595-1.591 1.878-2.62 3.267-2.62 1.288 0 2.48.892 3.121 2.29-.262.402-.495.834-.674 1.309-.193.517.07 1.093.586 1.287.116.043.234.064.351.064.404 0 .786-.247.936-.65.597-1.59 1.88-2.618 3.268-2.618 1.39 0 2.672 1.028 3.27 2.619.193.518.77.777 1.287.585.516-.194.778-.77.585-1.288"
          />
        </g>
      </svg>
    </span>
    replaceOwner
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12.392 20.384l.007 1.342c.001.151.123.273.274.273h1.333c.073 0 .143-.029.195-.08l4.028-4.029c.158-.158.158-.415 0-.573l-1.182-1.182c-.144-.144-.378-.144-.522 0l-4.053 4.054c-.052.051-.08.122-.08.195M19.434 16.685l1.48-1.478c.11-.11.11-.292 0-.403l-1.328-1.327c-.11-.11-.292-.11-.403 0l-1.478 1.48c-.112.11-.112.291 0 .402l1.327 1.326c.111.111.291.111.402 0M12.998 8.02V4.83l3.178 3.174-3.177.016zM19 11V8.371c0-.24-.096-.469-.265-.638l-5.432-5.427C13.104 2.11 12.838 2 12.56 2h-7.56c-1.107 0-2 .895-2 2v16c0 1.104.893 2 2 2h3.988l.011.002c.553 0 1-.448 1-1s-.447-1-1-1V20H5V4h5.998v4.02c0 1.09.889 1.975 1.98 1.975H17v1.01h.003c.006.547.448.99.997.99.55 0 .994-.443.998-.99H19v-.006z"
          />
        </g>
      </svg>
    </span>
    requiredConfirmations
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 20c-1.846 0-3.542-.635-4.897-1.688L18.312 7.103C19.366 8.457 20 10.154 20 12c0 4.411-3.589 8-8 8m-8-8c0-4.411 3.589-8 8-8 1.846 0 3.542.635 4.897 1.688L5.688 16.897C4.634 15.543 4 13.846 4 12m8-10C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2"
          />
        </g>
      </svg>
    </span>
    restricted
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M21.3 5.373c-.528-.17-1.089.117-1.26.642l-.397 1.22C18.03 4.638 15.178 3 12.003 3c-4.195 0-7.797 2.848-8.76 6.925-.127.537.206 1.076.745 1.203.077.017.154.026.23.026.453 0 .863-.309.973-.77C5.94 7.214 8.741 5 12.003 5c2.491 0 4.71 1.308 5.96 3.359l-1.55-.476c-.53-.164-1.089.136-1.25.662-.163.528.134 1.088.661 1.25l3.687 1.133c.098.03.197.044.294.044.422 0 .813-.269.951-.691l1.186-3.647c.17-.526-.118-1.09-.642-1.261M20.046 12.571c-.549-.107-1.069.247-1.175.788C18.23 16.63 15.341 19 12.003 19 9.52 19 7.3 17.693 6.05 15.646l1.53.471c.53.165 1.087-.135 1.25-.662.161-.529-.135-1.088-.663-1.25L4.48 13.071c-.523-.16-1.076.128-1.246.647l-1.185 3.65c-.17.523.117 1.088.643 1.26.102.032.206.047.308.047.422 0 .814-.268.951-.69l.402-1.237C5.965 19.354 8.827 21 12.003 21c4.29 0 8.004-3.05 8.831-7.254.107-.542-.247-1.069-.788-1.175"
          />
        </g>
      </svg>
    </span>
    resync
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M19.404 2c.927 0 1.596.097 1.996.398.073.054.137.118.192.19.91 1.188.344 5.855-1.35 7.941l-.157.183-.451.451.046.255c.485 2.884.001 5.578-1.106 7.97-.486 1.05-.979 1.812-1.326 2.243-.347.429-.968.49-1.391.161l-.094-.083-3.337-3.338-.72.722c-1.084 1.082-3.042.183-4.868-1.58l-.177-.172c-1.815-1.816-2.805-3.8-1.85-4.938l.1-.108.718-.719L2.293 8.24c-.42-.42-.383-1.112.079-1.485.43-.348 1.191-.84 2.242-1.327 2.462-1.14 5.244-1.619 8.225-1.06l.454-.453.22-.19C14.936 2.562 17.23 2 19.403 2zm-1.558 10.952l-4.006 4.005 2.467 2.468c.106-.183.207-.372.305-.571l.147-.306c.792-1.71 1.21-3.593 1.087-5.596zM19.404 4c-1.735 0-3.587.453-4.57 1.226l-.155.131-8.212 8.21.025.093.051.147.034.082.061.133c.274.565.787 1.253 1.438 1.904.651.652 1.339 1.165 1.904 1.438.092.045.178.082.254.11l.108.037.093.024 8.196-8.196c.646-.706 1.096-1.96 1.283-3.416.064-.502.092-.998.086-1.43l-.008-.25-.016-.22-.228-.015-.167-.006L19.404 4zM5.454 7.243c-.209.097-.408.196-.597.296l-.281.155 2.468 2.467 4.007-4.004c-2.004-.124-3.887.294-5.597 1.086z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    rocket
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M22 4v4c0 .552-.448 1-1 1s-1-.448-1-1V4h-4c-.552 0-1-.448-1-1s.448-1 1-1h4c1.105 0 2 .895 2 2zM4 4v4c0 .552-.448 1-1 1s-1-.448-1-1V4c0-1.105.895-2 2-2h4c.552 0 1 .448 1 1s-.448 1-1 1H4zM20 20v-4c0-.552.448-1 1-1s1 .448 1 1v4c0 1.105-.895 2-2 2h-4c-.552 0-1-.448-1-1s.448-1 1-1h4zM4 20h4c.552 0 1 .448 1 1s-.448 1-1 1H4c-1.105 0-2-.895-2-2v-4c0-.552.448-1 1-1s1 .448 1 1v4z"
            fillRule="nonzero"
          />
          <rect
            className="icon-color"
            height="2"
            rx="1"
            width="20"
            x="2"
            y="11"
          />
        </g>
      </svg>
    </span>
    scan
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            d="M20 4c1.054 0 1.918.816 1.995 1.85L22 6v12c0 1.054-.816 1.918-1.85 1.994l-.153.005c0 .518-.385.94-.883.998l-.117.007c-.512 0-.935-.386-.993-.884L17.997 20H5.998c0 .518-.386.94-.883.998l-.117.007c-.553 0-1-.447-1-1-1.053-.005-1.916-.821-1.992-1.855L2 17.999V6c0-1.053.817-1.917 1.851-1.994L4.001 4h16zm0 2H4v12h16V6z"
            fill="#B2B5B2"
          />
          <path
            d="M14.997 8c-2.209 0-4 1.792-4 4 0 2.21 1.791 4 4 4 2.21 0 4-1.79 4-4 0-2.208-1.79-4-4-4m0 2c1.103 0 2 .897 2 2 0 1.104-.897 2-2 2s-2-.896-2-2c0-1.103.897-2 2-2"
            fill="#B2B5B2"
          />
          <path
            d="M6.998 8c.513 0 .936.386.994.883L7.998 9v6c0 .552-.447 1-1 1-.513 0-.935-.386-.993-.884L5.998 15V9c0-.552.448-1 1-1z"
            fill="#B2B5B2"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    safe
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M4 10c0-3.31 2.691-6 6-6 3.308 0 6 2.69 6 6 0 3.309-2.692 6-6 6-3.309 0-6-2.691-6-6m17.705 10.293L16.313 14.9C17.366 13.547 18 11.849 18 10c0-4.418-3.582-8-8-8-4.419 0-8 3.582-8 8s3.581 8 8 8c1.848 0 3.545-.633 4.898-1.685l5.393 5.392c.39.389 1.025.389 1.414 0 .39-.39.39-1.025 0-1.414"
          />
        </g>
      </svg>
    </span>
    search
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M15.529 11.316c3.613.955 5.885 4.118 7.43 9.41.154.53-.15 1.085-.68 1.24-.531.155-1.086-.15-1.24-.68-1.657-5.678-3.995-8.28-8.04-8.28-2.229 0-3.927.825-5.289 2.474-.352.426-.982.486-1.408.134-.426-.352-.486-.982-.134-1.408 1.19-1.442 2.628-2.411 4.328-2.878C9.005 10.463 8.002 8.848 8.002 7c0-2.761 2.238-5 5-5 2.761 0 5 2.239 5 5 0 1.84-.993 3.447-2.473 4.316zM13.002 10c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M11.582 20.005H3c-.552 0-1-.448-1-1s.448-1 1-1h8.584l-.283-.283c-.39-.39-.39-1.024 0-1.414.39-.39 1.023-.39 1.414 0l1.989 1.989c.39.39.39 1.023 0 1.414l-1.989 1.99c-.39.39-1.023.39-1.414 0-.39-.39-.39-1.023 0-1.414l.281-.282z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    sendAgain
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M15.287 11.692l-2.29-2.29v7.587c0 .55-.45 1-1 1-.551 0-1-.45-1-1V9.402l-2.291 2.29c-.39.39-1.025.39-1.414 0-.39-.389-.39-1.025 0-1.414l3.998-3.997c.058-.06.132-.092.2-.133.042-.025.076-.06.122-.08.04-.019.087-.019.13-.029.212-.057.436-.056.64.028.044.02.077.054.118.08.07.04.143.073.204.134l3.997 3.997c.389.39.389 1.025 0 1.414-.39.39-1.025.39-1.414 0z"
          />
        </g>
      </svg>
    </span>
    sent
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M17.99 18.996c0 .551-.448 1-1 1H4c-.552 0-1-.449-1-1v-2c0-.546.44-.988.983-.997l.017.002h12.99l.017-.002c.543.01.983.451.983.997v2zM3 11.001c0-.552.448-1 1-1h4.151c.318 1.565 1.13 2.948 2.258 3.995H4l-.017.001c-.543-.009-.983-.45-.983-.996v-2zm0-5.995c0-.552.448-1 1-1h5.506C8.66 5.134 8.124 6.506 8.026 8H4c-.552 0-1-.449-1-1V5.006zM21 8.5c0 3.032-2.467 5.5-5.5 5.5-3.032 0-5.5-2.468-5.5-5.5C10 5.467 12.468 3 15.5 3 18.533 3 21 5.467 21 8.5zm2 0C23 4.357 19.642 1 15.5 1c-1.364 0-2.639.37-3.74 1.006H4c-1.657 0-3 1.343-3 3V7c0 .772.3 1.47.78 2.001-.48.531-.78 1.228-.78 2.001v2c0 .77.3 1.466.776 1.997C1.3 15.53 1 16.225 1 16.996v2c0 1.656 1.343 3 3 3h12.99c1.657 0 3-1.344 3-3v-2c0-.768-.296-1.459-.77-1.989C21.475 13.714 23 11.287 23 8.5z"
          />
          <path
            className="icon-color"
            d="M15.5 7.086l1.414-1.414c.391-.391 1.024-.391 1.414 0 .391.391.391 1.023 0 1.414L16.914 8.5l1.414 1.414c.391.39.391 1.024 0 1.414-.39.391-1.023.391-1.414 0L15.5 9.914l-1.413 1.414c-.391.391-1.025.391-1.415 0-.391-.39-.391-1.024 0-1.414L14.086 8.5l-1.414-1.414c-.391-.391-.391-1.023 0-1.414.39-.391 1.024-.391 1.415 0L15.5 7.086z"
          />
        </g>
      </svg>
    </span>
    serverError
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12.01 18c-3.309 0-6-2.691-6-6 0-3.31 2.691-6 6-6s6 2.69 6 6c0 3.309-2.691 6-6 6m9.141-7.211l-.346-.03c-.693-.074-.954-.491-1.046-.717-.192-.763-.493-1.48-.886-2.14-.095-.22-.217-.705.229-1.256l.222-.266c.486-.554.292-.901-.096-1.291l-.322-.321c-.389-.39-.737-.582-1.291-.097l-.266.223c-.585.472-1.096.308-1.294.212-.619-.364-1.291-.645-2.002-.833-.165-.046-.729-.263-.816-1.082l-.031-.346c-.049-.735-.43-.845-.981-.845h-.455c-.55 0-.933.11-.981.845l-.031.346c-.102.959-.863 1.095-.863 1.095l.001.006c-.658.18-1.281.445-1.859.777-.002-.003-.003-.008-.006-.011 0 0-.634.442-1.384-.163L6.38 4.67c-.554-.485-.902-.292-1.291.097l-.321.32c-.389.39-.582.738-.098 1.292l.224.266c.606.75.163 1.385.163 1.385.005.004.011.006.016.009-.332.579-.595 1.2-.774 1.859l-.014-.004s-.135.76-1.094.864l-.347.03c-.734.049-.844.432-.844.982v.455c0 .549.11.932.844.98l.347.03c.959.103 1.094.865 1.094.865l.012-.003c.18.658.438 1.283.768 1.862l-.008.004s.443.635-.163 1.385l-.224.266c-.484.554-.292.903.098 1.29l.321.323c.389.389.737.582 1.291.096l.267-.222c.75-.607 1.384-.164 1.384-.164l.002-.003c.58.333 1.204.592 1.862.773v.003s.761.136.863 1.095l.031.345c.048.735.431.844.981.844h.455c.551 0 .932-.11.981-.844l.031-.345c.08-.748.556-.994.764-1.066.727-.186 1.411-.475 2.042-.844.188-.094.707-.278 1.306.206l.266.223c.554.485.902.292 1.291-.097l.322-.322c.388-.388.582-.737.096-1.291l-.222-.265c-.479-.594-.305-1.11-.209-1.301.382-.65.68-1.352.869-2.101.094-.227.354-.637 1.043-.711l.346-.031c.734-.048.843-.431.843-.98v-.455c0-.55-.109-.933-.843-.982"
          />
        </g>
      </svg>
    </span>
    settings
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M11.999 14.57c-1.418 0-2.571-1.153-2.571-2.571 0-1.417 1.153-2.571 2.571-2.571 1.418 0 2.571 1.154 2.571 2.571 0 1.418-1.153 2.571-2.571 2.571m5.2-3.606l-.257-.026c-.585-.058-.857-.375-.975-.574-.058-.219-.093-.636.271-1.103l.17-.207c.464-.52.304-.825-.03-1.159l-.275-.275c-.334-.333-.638-.493-1.159-.03l-.201.164c-.459.376-.879.34-1.102.28-.199-.115-.522-.386-.58-.977l-.026-.257c-.042-.696-.37-.8-.84-.8h-.391c-.471 0-.8.104-.84.8l-.026.265c-.072.588-.393.858-.588.972-.224.058-.64.09-1.095-.283l-.201-.165c-.521-.462-.825-.302-1.159.031l-.276.275c-.333.334-.493.639-.03 1.159l.17.207c.365.467.33.884.272 1.103-.118.2-.39.516-.975.574l-.257.026c-.695.042-.799.369-.799.84v.39c0 .472.104.8.799.841l.266.025c.588.073.857.393.97.588.059.225.09.641-.282 1.096l-.165.2c-.462.521-.302.826.031 1.16l.276.275c.334.334.638.493 1.159.03l.207-.17c.462-.362.875-.33 1.095-.272.196.115.51.384.582.966l.026.267c.04.695.369.799.84.799h.39c.471 0 .8-.104.841-.799l.026-.258c.057-.585.375-.857.574-.975.219-.057.635-.093 1.102.271l.207.172c.521.462.825.303 1.159-.031l.276-.275c.333-.334.493-.639.03-1.16l-.164-.2c-.373-.455-.341-.871-.283-1.096.114-.195.383-.515.971-.588l.266-.025c.695-.04.799-.37.799-.84v-.39c0-.472-.104-.8-.799-.841"
          />
        </g>
      </svg>
    </span>
    settingsChange
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M5.986 2.524c-.65.279-.812 1.126-.312 1.626l2.462 2.462c.42.42.42 1.103 0 1.524-.422.42-1.103.42-1.525 0L4.15 5.673c-.5-.5-1.347-.338-1.626.312-1.004 2.339-.551 5.027 1.227 6.804l.187.179c1.33 1.22 3.125 1.743 4.915 1.503l.19-.03 6.44 6.44c1.491 1.49 3.908 1.49 5.4.001l.148-.157c1.34-1.5 1.29-3.803-.148-5.243l-6.441-6.44.03-.19c.252-1.875-.335-3.755-1.682-5.102-1.777-1.778-4.465-2.231-6.804-1.227zM8.49 3.999c1.074-.007 2.114.392 2.886 1.166 1.017 1.017 1.385 2.504 1.01 3.953-.088.343.011.707.262.958l6.822 6.82c.708.71.708 1.863-.001 2.573-.71.708-1.86.708-2.57 0l-6.822-6.822c-.25-.25-.615-.35-.958-.261-1.45.374-2.936.006-3.953-1.01l-.15-.158C4.34 10.464 3.993 9.49 4 8.488l.004-.133L5.198 9.55c1.202 1.201 3.149 1.201 4.351 0l.134-.142c1.066-1.21 1.022-3.055-.133-4.21L8.355 4.003l.134-.004z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    settingsTool
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M9.835 10.938c.107.336.165.694.165 1.066 0 .37-.058.729-.165 1.064l5.086 3.082c.64-.702 1.561-1.142 2.586-1.142 1.933 0 3.5 1.567 3.5 3.5 0 1.934-1.567 3.5-3.5 3.5-1.934 0-3.5-1.566-3.5-3.5 0-.186.014-.37.042-.548l-5.345-3.238c-.601.489-1.369.782-2.204.782-1.933 0-3.5-1.568-3.5-3.5 0-1.934 1.567-3.5 3.5-3.5.835 0 1.602.292 2.204.78l5.345-3.238c-.028-.178-.042-.36-.042-.546 0-1.933 1.567-3.5 3.5-3.5s3.5 1.567 3.5 3.5S19.44 9 17.507 9c-1.025 0-1.947-.44-2.587-1.143l-5.085 3.08zm9.172-5.439c0-.828-.672-1.5-1.5-1.5-.829 0-1.5.672-1.5 1.5 0 .83.671 1.5 1.5 1.5.828 0 1.5-.67 1.5-1.5zM8 12.005c0-.83-.671-1.5-1.5-1.5s-1.5.67-1.5 1.5c0 .828.671 1.5 1.5 1.5.828 0 1.5-.672 1.5-1.5zm11.007 6.504c0-.828-.672-1.5-1.5-1.5-.829 0-1.5.672-1.5 1.5 0 .829.671 1.5 1.5 1.5.828 0 1.5-.671 1.5-1.5z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    share
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M6 20V4h5.998v4.02c0 1.088.889 1.974 1.98 1.974H18V20H6zM17.175 8.003l-3.177.017V4.83l3.178 3.173zm2.56-.27l-5.432-5.426c-.198-.197-.464-.307-.74-.307H6c-1.104 0-2 .896-2 2v16c0 1.104.896 2 2 2h12c1.105 0 2-.896 2-2V8.371c0-.239-.096-.469-.265-.638z"
          />
        </g>
      </svg>
    </span>
    termsOfUse
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M21.7 13.297c-.388-.39-1.024-.39-1.413 0l-2.29 2.29V6c0-.55-.45-1-1-1-.551 0-1 .45-1 1v9.587l-2.291-2.29c-.39-.389-1.025-.389-1.414 0-.39.389-.39 1.025 0 1.414l3.998 3.997c.058.06.132.092.2.133.042.025.076.061.122.081.04.018.087.018.13.028.212.057.436.056.64-.028.044-.019.077-.054.118-.079.07-.041.143-.074.204-.135l3.997-3.997c.389-.389.389-1.025 0-1.414M11.7 10.692c-.388.39-1.024.39-1.413 0l-2.29-2.29v9.587c0 .55-.45 1-1 1-.551 0-1-.45-1-1V8.402l-2.291 2.29c-.39.39-1.025.39-1.414 0-.39-.389-.39-1.025 0-1.414L6.29 5.281c.058-.06.132-.092.2-.133.042-.025.076-.06.122-.08.04-.019.087-.019.13-.029.212-.057.436-.056.64.028.044.02.077.054.118.08.07.04.143.073.204.134L11.7 9.278c.389.39.389 1.025 0 1.414"
          />
        </g>
      </svg>
    </span>
    transactionsInactive
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M18 18.997c0 .552-.448 1-1 1H7c-.552 0-1-.448-1-1v-7c0-.552.448-1 1-1h10c.552 0 1 .448 1 1v7zm.004-9.814V8c0-3.31-2.692-6.001-6-6.001-2.417 0-4.586 1.439-5.527 3.665-.215.509.022 1.096.531 1.31.508.215 1.096-.023 1.31-.531C8.946 4.96 10.393 4 12.004 4c2.206 0 4 1.795 4 4v.997H7c-1.654 0-3 1.346-3 3v7c0 1.654 1.346 3 3 3h10c1.654 0 3-1.346 3-3v-7c0-1.301-.837-2.4-1.996-2.814z"
          />
          <path
            className="icon-color"
            d="M13.5 14.494c0-.83-.672-1.5-1.5-1.5s-1.5.67-1.5 1.5c0 .443.196.838.502 1.112v1.384c0 .554.449 1.003 1.004 1.003.554 0 1.003-.45 1.003-1.003v-1.392c.3-.275.491-.666.491-1.104"
          />
        </g>
      </svg>
    </span>
    unlocked
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12.003 4c1.654 0 3 1.345 3 3 0 1.654-1.346 3-3 3s-3-1.346-3-3c0-1.655 1.346-3 3-3m4.311 8.069c-.58-.323-1.202-.565-1.855-.741C15.97 10.467 17.003 8.86 17.003 7c0-2.757-2.243-5-5-5s-5 2.243-5 5c0 1.853 1.025 3.455 2.527 4.319-4.483 1.172-6.36 5.529-7.49 9.406-.154.53.15 1.086.68 1.24.094.028.188.04.28.04.434 0 .833-.283.96-.719 1.692-5.804 4.097-8.281 8.04-8.281 1.272 0 2.363.265 3.337.81.481.268 1.091.096 1.361-.385.27-.482.097-1.092-.384-1.361M13.399 20.385l.008 1.342c0 .151.123.273.274.273h1.333c.073 0 .143-.029.195-.08l4.028-4.029c.158-.158.158-.414 0-.572l-1.182-1.183c-.144-.144-.378-.144-.522 0L13.48 20.19c-.052.051-.081.122-.081.195M20.442 16.686l1.479-1.479c.11-.11.11-.29 0-.402l-1.328-1.326c-.11-.11-.291-.11-.402 0l-1.479 1.478c-.111.111-.111.292 0 .403l1.326 1.326c.111.111.293.111.404 0"
          />
        </g>
      </svg>
    </span>
    userEdit
  </div>
  <div
    className="sc-fuISkM fmClrj"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M19 9V7H4v10h15v-2h-3c-.552 0-1-.448-1-1v-4c0-.552.448-1 1-1h3zm2 6v2c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2V7c0-1.105.895-2 2-2h15c1.105 0 2 .895 2 2v2c.552 0 1 .448 1 1v4c0 .552-.448 1-1 1zm-4-4v2h3v-2h-3z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    wallet
  </div>
</div>
`;

exports[`Storyshots Data Display/Icon With Tooltip 1`] = `
<span
  aria-describedby={null}
  className="sc-iqAclL csKvIw"
  color="primary"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title="some text"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M0 0H24V24H0z"
      />
      <path
        className="icon-color"
        d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
        fillRule="nonzero"
      />
      <path
        className="icon-color"
        d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
      />
    </g>
  </svg>
</span>
`;
